<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="hello_big_world">Hello big World!</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="button">Button</string>
    <string name="fleur">TODO</string>
    <string name="_0">0</string>
    <string name="Button1">Button</string>
    <string name="Button2">Button</string>
    <string name="Button3">Button</string>
    <string name="Toast">Toast</string>
    <string name="Count">Count</string>
    <string name="Random">Random</string>
    <string name="truc2">TODO</string>
    <string name="random_heading">Here a number \n between 0 and %1d</string>
    <string name="n">N</string>
    <string name="r">R</string>
</resources>
