<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:fontFamily="sans-serif-condensed"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="650dp"
            android:layout_marginTop="40dp"
            android:id="@+id/textViewBienvenue"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="200dp"/>

    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber"
            android:textSize="100sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintVertical_bias="0.479"/>
    <Button
            android:text="@string/Toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toast_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber"
            android:onClick="toastMe"/>
    <Button
            android:text="@string/Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="countMe"/>
    <Button
            android:text="@string/Random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/random_button"
            tools:ignore="UnknownId"
            app:layout_constraintStart_toEndOf="@+id/toast_button"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/count_button"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.504" app:layout_constraintHorizontal_bias="0.473"
            android:background="@color/buttonBackground"/>

    <ImageView
            android:layout_width="99dp"
            android:layout_height="195dp"
            app:srcCompat="@drawable/fleur"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.965"
            android:contentDescription="@string/fleur"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewBienvenue"/>

</android.support.constraint.ConstraintLayout>

